# CourseWorkThirdYear

./: .gitignore  CMakeLists.txt  README.md  empty  format.pb.cc  format.pb.h  module_info.txt  modules_info.cpp  modules_info.hpp  not_traced_modules.txt  output.txt  run.sh  tracca.cpp  trace.out
DrTrace/: .gitignore  CMakeCache.txt  CMakeLists.txt  DR_trace.cpp  Makefile  cmake_install.cmake  delete_logs.sh  general_headers.h  module.txt  modules_info.cpp  modules_info.hpp  utils.cpp  utils.hpp
TraceFormat/: format.proto
TraceReader/: CMakeLists.txt  format.pb.cc  format.pb.h  trace_reader.cpp
